--- a/test.html
+++ b/test.html
@@ -6,9 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <div class="first">first div</div>
-    <div class="second">second div</div>
-    <script src="./script.js"></script>
-  </body>
+  <body></body>
 </html>
